# mosu

./: .gitignore  AGENTS.md  ISSUES-AFTER-SVELTE-MIGRATION.md  README.md  forge.config.js  index.html  main.js  mosu!.sln  package-lock.json  package.json  preload.js  renderer_head.js  vite.config.js
public/: renderer.js  tauri-bridge.js
renderer/: index.html  renderer.js  style.css  tauri-bridge.js
renderer/modules/: Main.js
scripts/: dev-fresh.js  sync-renderer.js  update-version.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.firstrun.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/realm-resolver/: Program.cs  RealmResolver.csproj
src-tauri/sidecar/realm-resolver/pub-fdd/: RealmInspector.deps.json
src-tauri/sidecar/realm-resolver/pub-trimmed/: RealmInspector.deps.json  RealmInspector.runtimeconfig.json
src-tauri/src/: main.rs
src/components/: AppHeader.svelte  CustomTooltip.svelte  MainList.svelte  NotificationCenter.svelte  StickyHeader.svelte
src/core/: listQuery.js
src/services/: appMetaService.js  bridgeUtils.js  coreStateService.js  dialogBackdropService.js  dialogService.js  filterControlsService.js  groupViewService.js  itemDetailsService.js  legacyRowsService.js  listItemActionsService.js  listUiService.js  primaryActionsService.js  promptDialogService.js  refreshUiService.js  renderSurfaceService.js  settingsControlsService.js  todoOrderService.js  viewModelService.js
src/stores/: appMeta.js  coreState.js  filterControls.js  groupView.js  itemDetails.js  (+6 more)
(+59 files in other folders)
